testsuite/poke.pkl/array-siz-diag-2.pk
/* { dg-do compile } */

type foo = struct { uint<8>[11#b] i; /* { dg-error "do not fit" } */
};
